improved size of the images to scale with the page width

--- a/curation.html
+++ b/curation.html
@@ -90,8 +90,10 @@
 
 				<p>This is how the tool looked like before the redesign:</p>
 
-				<a class="fancybox" rel="curation tool before" title="List of findings belonging to a research article" href="img/curation/before/snapshot-all%20findings.JPG"><img class="gallery2" id="curation_before_1" src="img/curation/before/snapshot-all%20findings.JPG" alt="" style="vertical-align: top;"/></a>
-				<a class="fancybox" rel="curation tool before" title="Form to be completed for each finding" href="img/curation/before/snapshot-finding.JPG"><img class="gallery2" id="curation_before_2" src="img/curation/before/snapshot-above%20fold.jpg" alt="" /></a>
+                <div class="gallery">
+				    <a class="fancybox" rel="curation tool before" title="List of findings belonging to a research article" href="img/curation/before/snapshot-all%20findings.JPG"><img class="gallery2" id="curation_before_1" src="img/curation/before/snapshot-all%20findings.JPG" alt="" style="vertical-align: top;"/></a>
+				    <a class="fancybox" rel="curation tool before" title="Form to be completed for each finding" href="img/curation/before/snapshot-finding.JPG"><img class="gallery2" id="curation_before_2" src="img/curation/before/snapshot-above%20fold.jpg" alt="" /></a>
+                </div>
 
 				<p>The product has been used with success for a while, but it has started to get more and more
 					complaints once more users joined, the volume of work grew and the performance dropped.</p>
@@ -272,8 +274,10 @@
 				<p>There was not much to change when it came to displaying lists of articles and findings. I did clean
 					up the screens, removing the unnecessary lines and using visual groupings instead.</p>
 
-				<a class="fancybox" rel="curation after" title="Home screen with the list of assigned research articles and their status" href="img/curation/after/1.homescreen.png"><img class="gallery2" id="curation_after_1" src="img/curation/after/1.homescreen.png" alt="" /></a>
-				<a class="fancybox" rel="curation after" title="List of findings belonging to a research article" href="img/curation/after/2.display%20findings%20for%20article.png"><img class="gallery2" id="curation_after_2" src="img/curation/after/2.display%20findings%20for%20article.png" alt="" /></a>
+                <div class="gallery">
+				    <a class="fancybox" rel="curation after" title="Home screen with the list of assigned research articles and their status" href="img/curation/after/1.homescreen.png"><img class="gallery2" id="curation_after_1" src="img/curation/after/1.homescreen.png" alt="" /></a>
+				    <a class="fancybox" rel="curation after" title="List of findings belonging to a research article" href="img/curation/after/2.display%20findings%20for%20article.png"><img class="gallery2" id="curation_after_2" src="img/curation/after/2.display%20findings%20for%20article.png" alt="" /></a>
+                </div>
 
                 <p>The information layering was also improved by means of colors and typography, and also by using icons,
                     to make status of the findings more visible.</p>
@@ -287,7 +291,10 @@
                     careless work and errors. I found it interesting that users cheated anyway, by duplicating a completed finding,
                     modifying the different answers, and rejecting the finding they were supposed to fill in the first
                     place.</p>
-                <a class="fancybox" rel="curation after" title="Completing multiple findings with the same information to reduce time and errors" href="img/curation/after/3.display%20findings%20for%20article%20-%20fill%20multiple%20findings.png"><img class="gallery1" id="curation_after_3" src="img/curation/after/3.display%20findings%20for%20article%20-%20fill%20multiple%20findings.png" alt="" /></a>
+
+                <div class="gallery">
+                    <a class="fancybox" rel="curation after" title="Completing multiple findings with the same information to reduce time and errors" href="img/curation/after/3.display%20findings%20for%20article%20-%20fill%20multiple%20findings.png"><img class="gallery1" id="curation_after_3" src="img/curation/after/3.display%20findings%20for%20article%20-%20fill%20multiple%20findings.png" alt="" /></a>
+                </div>
 
                 <p>The solution I proposed involves propagating the answers of a completed finding to all the findings
                     selected from the table. By hovering one of the selected rows, an icon would show up to the right,
@@ -311,7 +318,9 @@
                     making better use of the horizontal space, and by compressing the suggestions so that the sections
                     would become shorter. This is also helping the visual separation.</p>
 
-                <a class="fancybox" rel="curation after" title="Improved finding form that makes better use of the horizontal space and displays a better visual hierarchy" href="img/curation/after/4.finding%20form%20-%20above%20fold.png"><img class="gallery1" id="curation_after_4" src="img/curation/after/4.finding%20form%20-%20above%20fold.png" alt="" /></a>
+                <div class="gallery">
+                    <a class="fancybox" rel="curation after" title="Improved finding form that makes better use of the horizontal space and displays a better visual hierarchy" href="img/curation/after/4.finding%20form%20-%20above%20fold.png"><img class="gallery1" id="curation_after_4" src="img/curation/after/4.finding%20form%20-%20above%20fold.png" alt="" /></a>
+                </div>
 
                 <p>There is also a subtle change to the position of the buttons. The navigation buttons were moved to
                     the sides and the call to action button was placed in the middle, not to be missed and also not to change
@@ -334,9 +343,12 @@
 					some values. This meant there were some logical groupings hidden in there, and
 					they matched the mental model the users had when filling in or verifying information. I gave users the possibility to color
 					and move the rows so they can bring the groupings up to a visual layer.</p>
-				<a class="fancybox" rel="curation after" title="Genotype table with simplified, more compact and better separated rows. The actions are visible only on demand." href="img/curation/after/6.finding%20form%20-%20genotype%20table%20-%20multiple%20rows.png"><img class="gallery3" id="curation_after_6" src="img/curation/after/6.finding%20form%20-%20genotype%20table%20-%20multiple%20rows.png" alt="" /></a>
-				<a class="fancybox" rel="curation after" title="Option to color and move rows in order to create groups of rows that share similarities" href="img/curation/after/7.finding%20form%20-%20genotype%20table%20-%20multiple%20rows%20-%20grouping.png"><img class="gallery3" id="curation_after_7" src="img/curation/after/7.finding%20form%20-%20genotype%20table%20-%20multiple%20rows%20-%20grouping.png" alt="" /></a>
-				<a class="fancybox" rel="curation after" title="Focused row that makes the context switches easier" href="img/curation/after/8.finding%20form%20-%20genotype%20table%20-%20multiple%20rows%20-%20focus.png"><img class="gallery3" id="curation_after_8" src="img/curation/after/8.finding%20form%20-%20genotype%20table%20-%20multiple%20rows%20-%20focus.png" alt="" /></a>
+
+                <div class="gallery">
+                    <a class="fancybox" rel="curation after" title="Genotype table with simplified, more compact and better separated rows. The actions are visible only on demand." href="img/curation/after/6.finding%20form%20-%20genotype%20table%20-%20multiple%20rows.png"><img class="gallery3" id="curation_after_6" src="img/curation/after/6.finding%20form%20-%20genotype%20table%20-%20multiple%20rows.png" alt="" /></a>
+				    <a class="fancybox" rel="curation after" title="Option to color and move rows in order to create groups of rows that share similarities" href="img/curation/after/7.finding%20form%20-%20genotype%20table%20-%20multiple%20rows%20-%20grouping.png"><img class="gallery3" id="curation_after_7" src="img/curation/after/7.finding%20form%20-%20genotype%20table%20-%20multiple%20rows%20-%20grouping.png" alt="" /></a>
+				    <a class="fancybox" rel="curation after" title="Focused row that makes the context switches easier" href="img/curation/after/8.finding%20form%20-%20genotype%20table%20-%20multiple%20rows%20-%20focus.png"><img class="gallery3" id="curation_after_8" src="img/curation/after/8.finding%20form%20-%20genotype%20table%20-%20multiple%20rows%20-%20focus.png" alt="" /></a>
+                </div>
 
                 <p>The last improvement was making the focused row more visible, to also support context switches between
                     the screen and the written notes, and decrease mental load and chance of error.</p>
@@ -349,8 +361,11 @@
 
                 <p>The solution I proposed was a breadcrumb bar at the top of the screen, visible all the time, with
                     no restrictions, so users can navigate to whatever part of the application they want.</p>
-                <a class="fancybox" rel="curation after" title="Breadcrumb navigation with helpful information" href="img/curation/after/9.navigation%20findings.png"><img class="gallery2" id="curation_after_9" src="img/curation/after/9.navigation%20findings.png" alt="" /></a>
-				<a class="fancybox" rel="curation after" title="Breadcrumb navigation with helpful information" href="img/curation/after/10.navigation%20articles.png"><img class="gallery2" id="curation_after_10" src="img/curation/after/10.navigation%20articles.png" alt="" /></a>
+
+                <div class="gallery">
+                    <a class="fancybox" rel="curation after" title="Breadcrumb navigation with helpful information" href="img/curation/after/9.navigation%20findings.png"><img class="gallery2" id="curation_after_9" src="img/curation/after/9.navigation%20findings.png" alt="" /></a>
+				    <a class="fancybox" rel="curation after" title="Breadcrumb navigation with helpful information" href="img/curation/after/10.navigation%20articles.png"><img class="gallery2" id="curation_after_10" src="img/curation/after/10.navigation%20articles.png" alt="" /></a>
+                </div>
 
                 <p>I also decorated the options with additional information needed during navigation, like the
                     status of a finding, or the total number of findings of an article.</p>
