--- a/be_healthy.html
+++ b/be_healthy.html
@@ -70,7 +70,7 @@
 
         <div id="top_menu"></div>
 		<div id="side_menu"></div>
-		<div id="right_panel">
+		<div id="right_panel" class="project">
 
 			<div class="content">
 				<h1>BE HEALTHY!</h1>
