--- a/curation.html
+++ b/curation.html
@@ -74,7 +74,7 @@
 
         <div id="top_menu"></div>
 		<div id="side_menu"></div>
-		<div id="right_panel">
+		<div id="right_panel" class="project">
 			<div class="content">
 				<h1>CONTENT CURATION TOOL</h1>
 
