--- a/function_candidates.html
+++ b/function_candidates.html
@@ -71,7 +71,7 @@
 
         <div id="top_menu"></div>
 		<div id="side_menu"></div>
-		<div id="right_panel">
+		<div id="right_panel" class="project">
 
 			<div class="content">
 				<h1>BIOLOGICAL FUNCTIONS SPREADSHEET</h1>
