--- a/quesee.html
+++ b/quesee.html
@@ -75,7 +75,7 @@
 
         <div id="top_menu"></div>
 		<div id="side_menu"></div>
-		<div id="right_panel">
+		<div id="right_panel" class="project">
 
 			<div class="content">
 				<h1>QUESEE - A DIFFERENT KIND OF TEST AUTOMATION TOOL</h1>
