--- a/test_history.html
+++ b/test_history.html
@@ -73,7 +73,7 @@
 
         <div id="top_menu"></div>
 		<div id="side_menu"></div>
-		<div id="right_panel">
+		<div id="right_panel" class="project">
 
 			<div class="content">
 				<h1>TEST EXECUTION HISTORY CHART</h1>
