--- a/education.html
+++ b/education.html
@@ -74,7 +74,7 @@
 
 		<div id="right_panel">
 			<div id="introduction">
-				<p>I have spent the last ten years of my life developing an education around the computer industry. It was a childhood dream to become a computer programmer and I was fortunate to have the chance to study in a big city with lots of universities like <a href="http://en.wikipedia.org/wiki/Cluj-Napoca" target="-blank">Cluj Napoca</a>.</p>
+				<p>I have spent the last ten years of my life developing an education around computer science. It was a childhood dream to become a computer programmer and I was fortunate to have the chance to study in a big city with lots of universities, like <a href="http://en.wikipedia.org/wiki/Cluj-Napoca" target="-blank">Cluj Napoca</a>.</p>
 				<p>After going through college and doing a few years of professional programming, I fell in love with User Interface design. It happened when I met <a href="http://www.didi.com/" target="_blank">Bradford Paley</a> at a seminar held on site by
 				the company I was working for at that time. Since then, I read anything I could put my hands on related to UI design, and tried to build as many skills as I could to make the transition to professional designing.</p>
 				<p>My formal education in design consists mostly in seminars, online classes and a lot of interesting books that cover a large variety of topics, from human cognition and psychology, to color theory and typography.</p>
