--- a/projects.html
+++ b/projects.html
@@ -40,8 +40,8 @@
 			<div id="about_projects">
 				<p>These are a part of the projects I have been working on. You can read the whole story for each project, where there is a lengthy text will all the design steps in detail, or just click on the pictures and go through the slide shows.
 				Each picture has a meaningful description and you will still be able to follow the story, even if you don't have the time for the more detailed description.</p>
-				<p>Unfortunately, some of the most interesting things I have done are under Non Disclosure Agreements and I cannot share them here. 
-				I am currently in the process of getting approval for some of them, and luckily I will be able to post them soon.</p>
+				<p>Unfortunately, some of the most interesting things I have done are under Non Disclosure Agreements and I cannot share them here.
+				I am currently in the process of getting approval for some of them and luckily, I will be able to post them soon.</p>
 			</div>
 
 			<div id="projects_list">
