--- a/projects.html
+++ b/projects.html
@@ -143,6 +143,23 @@
 					<div class="project_title">Designing a health improvement service</div>
 				</div>
 
+				<div class="project">
+					<div class = "project_thumbnail" onmouseover="hover($(this));" onmouseout="unhover($(this));">
+						<a  class="bottom"href="network_highlight.html">
+							<img src="img/network_highlight/thumbnail.png"/>
+						</a>
+						<div class="overlay">
+							<div class="overlay_inner">
+								<div class="topics">
+									<div class="topic">DATA VISUALIZATION</div>
+									<div class="topic">VISUAL DESIGN</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="project_title">Layers of information in networks</div>
+				</div>
+
 			</div>
 			
 			<script>
